# HackMIT-2022

./: README.md
ISO-frontend/iso-frontend/: App.js  app.json  info.plist  package 3.json  package-lock.json  package.json
ISO-frontend/iso-frontend/components/: Header.js  HomeWithTabs.js  Request.js  VerifyUser.js
ISO-frontend/iso-frontend/contexts/: User.js
ISO-frontend/iso-frontend/views/: Feed.js  Feed2.js  Login 2.js  Login.js  MyStuff.js  RequestDetails.js  Settings.js  Signup.js  Splash.js  SubmitRequest.js
ISO-server/: Cargo.toml  template-config.toml
ISO-server/src/: data.rs  main.rs  post.rs  routes.rs  user.rs
ISO-website/: index.html
ISO-website/css/: main.css
ISO-website/scripts/: prelude.js  utils.js
assets/: logo.afdesign
backend/: README.md
data/: DFcleaning.py  NLP_EDA.py  NLP_preprocessing.py  Untitled-1.py  attachment.csv  content_cleaning.py  convertMailboxToCsv.py  mail.py  messages.csv  rec_classifier.py  text.pkl
frontend/: README.md
